# enhanced-variates

./: .gitignore
experiments/: Bracket.cpp  Bracket.h  BracketGenerator.cpp  BracketGenerator.h  BracketReader.cpp  BracketReader.h  CMakeLists.txt  ConditionalProbabilityTable.cpp  ConditionalProbabilityTable.h  Constants.h  GeneratorConfig.cpp  GeneratorConfig.h  Scorer.cpp  Scorer.h  Simulator.cpp  Simulator.h  main.cpp
experiments/Constants/: Errors.h
experiments/analysis/: Misc.cpp  Misc.h  Statistics.cpp  Statistics.h
experiments/brackets/: 2012.txt  2013.txt  2014.txt  2015.txt  2016.txt  2017.txt  allBrackets_metadata.json  allBrackets_metadata_pooled.json
experiments/brackets/FFF/: allBracketsFFF.json  allBracketsFFF_metadata.json
experiments/brackets/FFT/: allBracketsFFT.json
experiments/brackets/FTF/: allBracketsFTF.json
experiments/brackets/FTT/: allBracketsFTT.json
experiments/brackets/TFF/: allBracketsTFF.json  allBracketsTTF.json
experiments/brackets/TFT/: allBracketsTFT.json
experiments/brackets/TTT/: 2012.txt  2013.txt  2014.txt  2015.txt  2016.txt  2017.txt  ESPN_scores.json  allBracketsTTT.json  allBrackets_metadata.json
experiments/bulk-scorer/: main.cpp  score-all.sh
experiments/cpt/: BackwardCPT.cpp  BackwardCPT.h  BaseCPT.cpp  BaseCPT.h  ConditionalProbabilityTable.h  ForwardCPT.cpp  ForwardCPT.h  MixedCPT.cpp  MixedCPT.h  TripletCPT.cpp  TripletCPT.h
experiments/dependency/: gen.py  initial7.txt  inverted-pearson7.txt  inverted7.txt  pearson7.txt  random-0404-1.txt  random-1304-0.txt  random-1304-1.txt  random-1304-10.txt  random-1304-11.txt  random-1304-12.txt  random-1304-13.txt  random-1304-14.txt  random-1304-15.txt  random-1304-16.txt  random-1304-17.txt  random-1304-18.txt  random-1304-19.txt  random-1304-2.txt  random-1304-20.txt  random-1304-21.txt  random-1304-22.txt  random-1304-23.txt  random-1304-24.txt  random-1304-25.txt  random-1304-26.txt  random-1304-27.txt  random-1304-28.txt  random-1304-29.txt  random-1304-3.txt  random-1304-30.txt  random-1304-31.txt  random-1304-32.txt  random-1304-33.txt  random-1304-34.txt  random-1304-35.txt  random-1304-36.txt  random-1304-37.txt  random-1304-38.txt  random-1304-39.txt  (+17 more)
experiments/ml/: DataGenerator.cpp  DataGenerator.h  main.cpp
experiments/output/: Serializer.cpp  Serializer.h
experiments/results-0403/: summary.numbers
experiments/results-0403/TTT/2013/: 2013_04032018031121result.json  2013_04032018031121setup.json  2013_04032018031151result.json  2013_04032018031151setup.json  2013_04032018031228result.json  2013_04032018031228setup.json  2013_04032018031305result.json  2013_04032018031305setup.json  2013_04032018031348result.json  2013_04032018031348setup.json  2013_04032018031426result.json  2013_04032018031426setup.json  2013_04032018031509result.json  2013_04032018031509setup.json  2013_04032018031555result.json  2013_04032018031555setup.json  2013_04032018031644result.json  2013_04032018031644setup.json  2013_04032018031721result.json  2013_04032018031721setup.json  2013_04032018031805result.json  2013_04032018031805setup.json  2013_04032018031851result.json  2013_04032018031851setup.json  2013_04032018031941result.json  2013_04032018031941setup.json  2013_04032018032027result.json  2013_04032018032027setup.json  2013_04032018032118result.json  2013_04032018032118setup.json  2013_04032018032213result.json  2013_04032018032213setup.json  2013_04032018032308result.json  2013_04032018032308setup.json  2013_04032018032346result.json  2013_04032018032346setup.json  2013_04032018032430result.json  2013_04032018032430setup.json  2013_04032018032516result.json  (+2521 more)
experiments/results-0703/: summary.numbers
experiments/test/: BitsetTest.cpp  BitsetTest.h  BracketUtilsTest.h  ConditionalProbabilityTableTest.cpp  ConditionalProbabilityTableTest.h  ScorerTest.cpp  ScorerTest.h  SmoothingTest.cpp  SmoothingTest.h  test.cpp
experiments/test/mocks/: bracketsMock.json
experiments/utils/: BracketUtils.h  FileSystem.h  PrintUtils.h  RandomUtils.cpp  RandomUtils.h  StringUtils.h
experiments/variates/: IntraVariates.h
(+24384 files in other folders)
